# projectmission2

./: .gitignore  LICENSE  README.md  UNIFIED_SYSTEM_README.md  check_streamlit.sh  config.py  main.py  pyproject.toml  requirements.txt  restart_streamlit.sh  run_rag_system.py  run_unified_system.py  stop_streamlit.sh  test_main.ipynb  test_question_classifier.py
api/: async_generator.py  main.py  start_fastapi.sh
config/: data_preprocess_config.py  pdf_data_preprocessing_config.py  rag_config.yaml
data/: data_list_cleaned.csv  preprocess.py
data/ops/: README.md
models/: Untitled.ipynb
notebooks/: Untitled.ipynb  api_key.env  data_preprocessing_bjs(0922).ipynb  data_preprocessing_bjs(all,hwp5proc).ipynb  data_preprocessing_bjs(json).ipynb  data_preprocessing_bjs(pdfplumber).ipynb  data_preprocessing_bjs(single,hwp5proc).ipynb  data_preprocessing_bjs(xhtml).ipynb  data_preprocessing_bjs(텍스트 추출).ipynb  html .ipynb  폴더 삭제.ipynb
prompts/: README.md  prompt_config.yaml
prompts/versions/: user_template_analytical.txt  user_template_comparison.txt  user_template_explanatory.txt  user_template_general.txt  user_template_recommendation.txt  user_template_search copy.txt  user_template_search.txt  user_template_statistical.txt  user_template_summarization.txt  v1_evaluation_prompt.txt  v1_system_prompt.txt  v1_user_template.txt  v2_evaluation_prompt.txt  v2_system_prompt.txt  v2_user_template.txt  v3_advanced_evaluation_prompt.txt  v3_question_generation_prompt.txt  (+2 more)
src/: README.md  __init__.py  rfp_rag_main.py  streamlit_app.py  unified_streamlit_app.py
(+180 files in other folders)
